# amdox-internship

./: README.md  pdf_content.txt  requirements.txt
NeuralRetail/: .gitignore  0.0.18  README.md  docker-compose.prod.yml  docker-compose.yml  pdf_text.txt  pyproject.toml  requirements.txt  token.json
NeuralRetail/.github/workflows/: main.yml
NeuralRetail/airflow/dags/: demand_forecast_dag.py  model_retraining_dag.py
NeuralRetail/data/: neuralretail.db
NeuralRetail/data/bronze/: dlq_transactions.parquet  inventory.parquet  kafka_transactions.parquet  products.parquet  test_customers.parquet  test_kafka.parquet  transactions.parquet
NeuralRetail/data/gold/: product_catalog.parquet
NeuralRetail/data/silver/: customer_features.parquet  daily_sku_features.parquet
NeuralRetail/docker/: FastAPI.Dockerfile  Streamlit.Dockerfile
NeuralRetail/docs/: architecture.md  model_cards.md  personal_reflection.md
NeuralRetail/helm/neuralretail/: Chart.yaml  values.yaml
NeuralRetail/kubernetes/base/: champion-deployment.yaml  configmap.yaml  fastapi-deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  shadow-deployment.yaml  virtual-service.yaml
NeuralRetail/models/: elasticity_cache.json  prophet_model.pkl  stacked_churn.pkl  xgb_churn.pkl
NeuralRetail/models/artifacts/: meta_lr.pkl  (+3 more)
NeuralRetail/notebooks/: 01_EDA_Analysis.ipynb
NeuralRetail/requirements/: requirements.txt
NeuralRetail/scripts/: data_quality_gate.py  drift_detection.py  generate_data.py  train_models.py  tune_models.py
NeuralRetail/tests/: k6_load_test.js  test_phase2_integration.py  test_phase3_integration.py
(+365 files in other folders)
