[tool.poetry]
name = "neuralretail"
package-mode = false
version = "0.1.0"
description = "AI Sales Intelligence Platform"
authors = ["AI Solutions Architect"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
redis = "^5.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
streamlit = "^1.35.0"
plotly = "^5.22.0"
xgboost = "<2.0.0"
lightgbm = "^4.3.0"
prophet = "^1.1.5"
torch = "^2.3.0"
pytorch-lightning = "^2.2.4"
optuna = "^3.6.1"
shap = "^0.43.0"
mlflow = "^2.13.0"
pyspark = "^3.5.1"
delta-spark = "^3.1.0"
feast = "^0.37.1"
great-expectations = "^0.18.13"
evidently = "^0.4.20"
prometheus-client = "^0.20.0"
python-multipart = "^0.0.29"
openpyxl = "^3.1.5"
fpdf2 = "^2.8.7"
streamlit-authenticator = "^0.4.2"
dowhy = "^0.11.1"
econml = "^0.15.1"
pytorch-forecasting = {version = "^1.1.1", optional = true}
confluent-kafka = {version = "^2.4.0", optional = true}
requests = "^2.32.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
black = "^24.4.2"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = ["."]
